--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -21,9 +21,14 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+        
         {% block javascripts %}
-        <script src="{{ asset('js/jquery-1.11.1.min.js') }}" type="text/javascript"></script>
-        <script src="{{ asset('js/main.js') }}" type="text/javascript"></script>
+        {% stylesheets
+            'js/jquery-1.11.1.min.js'
+            'js/main.js'
+            output='js/compiled/all.js' %}
+            <script src="{{ asset_url }}"></script>
+        {% endstylesheets %}
         {% endblock %}
     </body>
 </html>
