--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -26,7 +26,7 @@
                     <p>My apologies, but the page which you were looking for is not available now, please click on the next image to return to the home.</p>
                 </div>
                 <div id="link_to_home">
-                    <a href="{{ url('christiangh_main_cgh_website_homepage') }}"><img src="{{ asset('images/cgh-logo-trans.png') }}" /></a>
+                    <a href="{{ url('christiangh_main_cgh_website_homepage') }}"><img src="{{ asset('images/logo_cgh.png') }}" /></a>
                 </div>
             </div>
         </div>
