--- a/app/Resources/ChristianghMainCghWebsiteBundle/views/nav.html.twig
+++ b/app/Resources/ChristianghMainCghWebsiteBundle/views/nav.html.twig
@@ -5,21 +5,21 @@
     	<div id="current_section" class="{{ current_section_class }}"></div>
         {% spaceless %}
     	<ul id="section_list">
-    		<li class="home_color"><a href="{{ url('christiangh_main_cgh_website_homepage') }}"><span>{{ 'navigation.home'|trans }}</span></a></li>
-    		<li class="my_cv_color"><a href="{{ url('christiangh_main_cgh_website_my_cv') }}"><span>{{ 'navigation.my_cv'|trans }}</span></a></li>
-    		{# <li class="portfolio_color"><a href="{{ url('christiangh_main_cgh_website_homepage') }}"><span>{{ 'navigation.portfolio'|trans }}</span></a></li> #}
-    		{# <li class="contents_color"><a href="{{ url('christiangh_main_cgh_website_homepage') }}"><span>{{ 'navigation.contents'|trans }}</span></a></li> #}
-    		<li class="blog_color"><a href="{{ url('ekino_wordpress_catchall', {'url': ''}) }}"><span>{{ 'navigation.blog'|trans }}</span></a></li>
-    		<li class="contact_color"><a href="{{ url('christiangh_main_cgh_website_contact') }}"><span>{{ 'navigation.contact'|trans }}</span></a></li>
+    		<li class="home_color"><a href="{{ url('christiangh_main_cgh_website_homepage') }}" title="CGH Home"><span>{{ 'navigation.home'|trans }}</span></a></li>
+    		<li class="my_cv_color"><a href="{{ url('christiangh_main_cgh_website_my_cv') }}" {% if app.request.locale == 'es' %}title="My Currículum Vitae"{% else %}title="My Curriculum Vitae"{% endif %}><span>{{ 'navigation.my_cv'|trans }}</span></a></li>
+    		{# <li class="portfolio_color"><a href="{{ url('christiangh_main_cgh_website_homepage') }}" title="Portfolio"><span>{{ 'navigation.portfolio'|trans }}</span></a></li> #}
+    		<li class="contents_color"><a href="{{ url('christiangh_main_cgh_website_contents') }}" {% if app.request.locale == 'es' %}title="Contenidos"{% else %}title="Contents"{% endif %}><span>{{ 'navigation.contents'|trans }}</span></a></li>
+    		<li class="blog_color"><a href="{{ url('ekino_wordpress_catchall', {'url': ''}) }}" title="Blog"><span>{{ 'navigation.blog'|trans }}</span></a></li>
+    		<li class="contact_color"><a href="{{ url('christiangh_main_cgh_website_contact') }}" {% if app.request.locale == 'es' %}title="Contacto"{% else %}title="Contact"{% endif %}><span>{{ 'navigation.contact'|trans }}</span></a></li>
     	</ul>
         {% endspaceless %}
     </div>
     <div id="nav_select">
-        <select id="section_select" class="home_color">
+        <select id="section_select" class="{{ current_section_class }}">
             <option value="{{ url('christiangh_main_cgh_website_homepage') }}" class="home_color" {% if current_section_class == 'home_color' %}selected="selected"{% endif %}>{{ 'navigation.home'|trans }}</option>
             <option value="{{ url('christiangh_main_cgh_website_my_cv') }}" class="my_cv_color" {% if current_section_class == 'my_cv_color' %}selected="selected"{% endif %}>{{ 'navigation.my_cv'|trans }}</option>
             {# <option value="{{ url('christiangh_main_cgh_website_homepage') }}" class="portfolio_color" {% if current_section_class == 'portfolio_color' %}selected="selected"{% endif %}>{{ 'navigation.portfolio'|trans }}</option> #}
-            {# <option value="{{ url('christiangh_main_cgh_website_homepage') }}" class="contents_color" {% if current_section_class == 'contents_color' %}selected="selected"{% endif %}>{{ 'navigation.contents'|trans }}</option> #}
+            <option value="{{ url('christiangh_main_cgh_website_contents') }}" class="contents_color" {% if current_section_class == 'contents_color' %}selected="selected"{% endif %}>{{ 'navigation.contents'|trans }}</option>
             <option value="{{ url('ekino_wordpress_catchall', {'url': ''}) }}" class="blog_color" {% if current_section_class == 'blog_color' %}selected="selected"{% endif %}>{{ 'navigation.blog'|trans }}</option>
             <option value="{{ url('christiangh_main_cgh_website_contact') }}" class="contact_color" {% if current_section_class == 'contact_color' %}selected="selected"{% endif %}>{{ 'navigation.contact'|trans }}</option>
         </select>
