--- a/src/Christiangh/MainCghWebsiteBundle/Resources/views/Default/webMap.html.twig
+++ b/src/Christiangh/MainCghWebsiteBundle/Resources/views/Default/webMap.html.twig
@@ -6,6 +6,11 @@
     <meta name="keywords" content="{{ 'meta.webmap.keywords'|trans }}" />
 {% endblock %}
 
+{% block css %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/web_map.css') }}" />
+{% endblock %}
+
 {% block main %}
 
 <main>
