--- a/app/Resources/ChristianghMainCghWebsiteBundle/views/header.html.twig
+++ b/app/Resources/ChristianghMainCghWebsiteBundle/views/header.html.twig
@@ -17,19 +17,23 @@
         {% if app.request.locale == 'es' %}
 			<img id="language_es" src="{{ asset('images/language-es.png') }}" class="language language_selected" alt="ES" title="Seleccionada la versión en Español" />
         {% else %}
-            {% if app.request.attributes.get('_route') != 'christiangh_main_cgh_website_content' %}
-                <a href="{{ url(app.request.attributes.get('_route'), {'locale': 'es'}) }}"><img id="language_es" src="{{ asset('images/language-es.png') }}" alt="ES" title="Spanish version" class="language" /></a>
-            {% else %}
+            {% if app.request.attributes.get('_route') == 'christiangh_main_cgh_website_content' %}
                 <a href="{{ url(app.request.attributes.get('_route'), {'locale': 'es', "content": content.getKey(), "translate": "content"}) }}"><img id="language_es" src="{{ asset('images/language-es.png') }}" alt="ES" title="Spanish version" class="language" /></a>
+            {% elseif app.request.attributes.get('_route') == 'christiangh_main_cgh_website_web_map' %}
+                <a href="{{ url(app.request.attributes.get('_route'), {'locale': 'es', '_format': 'html'}) }}"><img id="language_es" src="{{ asset('images/language-es.png') }}" alt="ES" title="Spanish version" class="language" /></a>
+            {% else %}
+                <a href="{{ url(app.request.attributes.get('_route'), {'locale': 'es'}) }}"><img id="language_es" src="{{ asset('images/language-es.png') }}" alt="ES" title="Spanish version" class="language" /></a>
             {% endif %}
         {% endif %}
         {% if app.request.locale == 'en' %}
             <img id="language_en" src="{{ asset('images/language-en.png') }}" class="language language_selected" alt="EN" title="English version selected" />
         {% else %}
-            {% if app.request.attributes.get('_route') != 'christiangh_main_cgh_website_content' %}
-                <a href="{{ url(app.request.attributes.get('_route'), {'locale': 'en'}) }}"><img id="language_en" src="{{ asset('images/language-en.png') }}" class="language" alt="EN" title="Versión en Inglés" /></a>
-            {% else %}
+            {% if app.request.attributes.get('_route') == 'christiangh_main_cgh_website_content' %}
                 <a href="{{ url(app.request.attributes.get('_route'), {'locale': 'en', "content": content.getKey(), "translate": "content"}) }}"><img id="language_en" src="{{ asset('images/language-en.png') }}" class="language" alt="EN" title="Versión en Inglés" /></a>
+            {% elseif app.request.attributes.get('_route') == 'christiangh_main_cgh_website_web_map' %}
+                <a href="{{ url(app.request.attributes.get('_route'), {'locale': 'en', '_format': 'html'}) }}"><img id="language_en" src="{{ asset('images/language-en.png') }}" class="language" alt="EN" title="Versión en Inglés" /></a>
+            {% else %}
+                <a href="{{ url(app.request.attributes.get('_route'), {'locale': 'en'}) }}"><img id="language_en" src="{{ asset('images/language-en.png') }}" class="language" alt="EN" title="Versión en Inglés" /></a>
             {% endif %}
         {% endif %}
 		</div>
